Add block temps to various Create components
Took 51 seconds